--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/LoveIt"]
 	path = themes/LoveIt
 	url = https://github.com/dillonzq/LoveIt.git
+[submodule "krystalmejia24.github.io"]
+	path = krystalmejia24.github.io
+	url = git@github.com:krystalmejia24/krystalmejia24.github.io.git
